# MGPTA

./: .gitignore  README.md  main.py  pyproject.toml
apps/: authenticate.py  utils.py
apps/configs/: mappings.py
