[tool.poetry]
name = "mgpta-qdb"
version = "0.1.0"
description = ""
authors = ["Eli Lee Kitagawa <cosmosart@msn.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.41.1"
google-cloud-firestore = "^2.19.0"
authlib = "^1.4.0"
streamlit-nightly = "^1.41.2.dev20250117"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
